# foss-build

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml
docopt/: __init__.py
docs/: 1  Requirements.md
foss_build/: app.py
test/: test_foss_build.py
